1)Fixed a Next.js config issue where CORS was causing the debug browser to refresh pages repeatedly.2)Fixed an issue where the date picker partly hidden by the title editor.3)Changed the index animation.

--- a/styles/react-datepicker-bsafes.css
+++ b/styles/react-datepicker-bsafes.css
@@ -100,7 +100,7 @@
 }
 
 .react-datepicker-popper {
-  z-index: 1;
+  z-index: 10;
 }
 .react-datepicker-popper[data-placement^=bottom] {
   padding-top: 10px;
